# GMBullet

./: .gitignore  .gitmodules  CMakeLists.txt  GMBullet.rar  GMBullet.resource_order  GMBullet.yyp  LICENSE  README.md  copy-gmdoc.py  gmdoc.json
Bullet4GM - Source/: GMBullet.sln
Bullet4GM - Source/Bullet4GM/: Bullet4GM.vcxproj  Bullet4GM.vcxproj.filters  CMakeLists.txt
Bullet4GM - Source/Bullet4GM/src/gmapi/: gm_Shape.cpp
Bullet4GM - Source/Bullet4GM/src/gmb/: Common.h  Main.h  Types.h
Bullet4GM - Source/Bullet4GM/src/gmb/core/: ObjectFactory.h  World.cpp
Bullet4GM - Source/Bullet4GM/src/gmb/utilities/: Math.h
GMBullet_Example/: GMBullet_Example.yyp
docs_src/: ScriptingAPI.md  index.md
extensions/GMBullet/: GMBullet.yy  libGMBullet.dylib
fonts/fnt_debug/: fnt_debug.yy
include/: Extension_Interface.h  GMBullet.hpp  constants.h  gmexport.h
include/GMBullet/: Main.h  Math.h  ObjectManager.h  World.h
objects/obj_box/: Create_0.gml  Step_0.gml  obj_box.yy
objects/obj_camera/: Create_0.gml  Draw_0.gml  Step_0.gml  obj_camera.yy
objects/obj_engine/: Alarm_0.gml  CleanUp_0.gml  Create_0.gml  Draw_0.gml  Draw_64.gml  Step_0.gml  obj_engine.yy
objects/obj_sphere/: CleanUp_0.gml  Create_0.gml  Step_0.gml  obj_sphere.yy
options/android/: options_android.yy
options/extensions/: TexDLL.json
options/html5/: options_html5.yy
options/ios/: options_ios.yy
options/linux/: options_linux.yy
options/mac/: options_mac.yy
options/main/: options_main.yy
options/operagx/: options_operagx.yy
options/tvos/: options_tvos.yy
options/windows/: options_windows.yy
options/xboxseriesxs/: options_xboxseriesxs.yy
rooms/rm_example/: rm_example.yy
scripts/Terrain/: Terrain.gml  Terrain.yy
scripts/__d3d_model_add_vertex/: __d3d_model_add_vertex.gml  __d3d_model_add_vertex.yy
scripts/__global_object_depths/: __global_object_depths.gml  __global_object_depths.yy
scripts/__gmbullet/: __gmbullet.gml  __gmbullet.yy
scripts/__init_background/: __init_background.yy
scripts/__init_d3d/: __init_d3d.yy
scripts/__init_global/: __init_global.yy
scripts/__init_view/: __init_view.yy
scripts/__view_get/: __view_get.yy
scripts/background_get_texture/: background_get_texture.gml  background_get_texture.yy
scripts/bt_body_apply_central_force/: bt_body_apply_central_force.gml  bt_body_apply_central_force.yy
scripts/bt_body_apply_central_impulse/: bt_body_apply_central_impulse.gml  bt_body_apply_central_impulse.yy
scripts/bt_body_apply_force/: bt_body_apply_force.yy
scripts/bt_body_apply_impulse/: bt_body_apply_impulse.yy
scripts/bt_body_apply_transform/: bt_body_apply_transform.gml  bt_body_apply_transform.yy
scripts/bt_body_copy_matrix/: bt_body_copy_matrix.gml  bt_body_copy_matrix.yy
scripts/bt_body_create/: bt_body_create.gml  bt_body_create.yy
scripts/bt_body_destroy/: bt_body_destroy.yy
scripts/bt_body_get_matrix/: bt_body_get_matrix.yy
scripts/bt_body_is_active/: bt_body_is_active.yy
scripts/bt_body_transform_to_buffer/: bt_body_transform_to_buffer.gml  bt_body_transform_to_buffer.yy
scripts/bt_free/: bt_free.yy
scripts/bt_init/: bt_init.yy
scripts/bt_shape_create_box/: bt_shape_create_box.gml  bt_shape_create_box.yy
scripts/bt_shape_create_sphere/: bt_shape_create_sphere.gml  bt_shape_create_sphere.yy
scripts/bt_transform_identity/: bt_transform_identity.yy
scripts/bt_transform_rotation/: bt_transform_rotation.yy
scripts/bt_transform_translation/: bt_transform_translation.yy
scripts/bt_world_add_body/: bt_world_add_body.yy
scripts/bt_world_free/: bt_world_free.yy
scripts/bt_world_get_body_count/: bt_world_get_body_count.gml  bt_world_get_body_count.yy
scripts/bt_world_init/: bt_world_init.gml  bt_world_init.yy
scripts/bt_world_remove_body/: bt_world_remove_body.yy
scripts/bt_world_set_gravity/: bt_world_set_gravity.gml  bt_world_set_gravity.yy
scripts/bt_world_simulate/: bt_world_simulate.yy
scripts/bt_world_simulate_ext/: bt_world_simulate_ext.yy
scripts/d3d_model_create/: d3d_model_create.gml  d3d_model_create.yy
scripts/d3d_model_draw/: d3d_model_draw.gml  d3d_model_draw.yy
scripts/d3d_model_ellipsoid/: d3d_model_ellipsoid.yy
scripts/d3d_model_primitive_begin/: d3d_model_primitive_begin.yy
scripts/d3d_model_primitive_end/: d3d_model_primitive_end.gml  d3d_model_primitive_end.yy
scripts/d3d_model_vertex_normal_texture/: d3d_model_vertex_normal_texture.yy
scripts/d3d_set_culling/: d3d_set_culling.yy
scripts/d3d_set_projection_ext/: d3d_set_projection_ext.yy
scripts/d3d_start/: d3d_start.yy
scripts/d3d_transform_set_identity/: d3d_transform_set_identity.yy
scripts/get_z/: get_z.yy
scripts/instance_create/: instance_create.yy
scripts/instance_create_3d/: instance_create_3d.gml  instance_create_3d.yy
scripts/matrix_build_normalmatrix/: matrix_build_normalmatrix.gml  matrix_build_normalmatrix.yy
scripts/model_build_cube/: model_build_cube.yy
scripts/model_build_plane/: model_build_plane.gml  model_build_plane.yy
scripts/object_get_depth/: object_get_depth.yy
scripts/texture_set_repeat/: texture_set_repeat.yy
scripts/vertex_default/: vertex_default.yy
scripts/vertex_formats_init/: vertex_formats_init.gml  vertex_formats_init.yy
shaders/btShDebugDraw/: btShDebugDraw.vsh  btShDebugDraw.yy
shaders/sh_default/: sh_default.fsh  sh_default.vsh  sh_default.yy
shaders/sh_mesh/: sh_mesh.fsh  sh_mesh.vsh  sh_mesh.yy
shaders/sh_terrain/: sh_terrain.fsh  sh_terrain.vsh  sh_terrain.yy
sprites/bg_default/: bg_default.yy
sprites/bg_floor/: bg_floor.yy
sprites/spr_body/: spr_body.yy
sprites/spr_heightmap/: spr_heightmap.yy
src/: body.cpp  main.cpp  shape.cpp  transform.cpp  world.cpp
src/GMBullet/: World.cpp  dllmain.cpp  exports.cpp  exports_btAxisSweep3.cpp  exports_btBoxShape.cpp  exports_btBvhTriangleMeshShape.cpp  exports_btCapsuleShape.cpp  exports_btClosestNotMeRayResultCallback.cpp  exports_btCollisionDispatcher.cpp  exports_btCollisionObject.cpp  exports_btCollisionShape.cpp  exports_btCollisionWorld.cpp  exports_btCompoundShape.cpp  exports_btConeShape.cpp  (+35 more)
(+111 files in other folders)
